apps/jellyfin/netpols.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
    name: jellyfin-namespace-policy
    namespace: &namespace jellyfin
spec:
    endpointSelector: {}
    ingress:
        # Allow ingress from all envoy-gateway in the networking namespace
        - fromEndpoints:
              - matchLabels:
                    app.kubernetes.io/name: envoy
                    # gateway.networking.k8s.io/gateway-name: envoy-internal
                    # This label must exist on the namespace object itself
                    "k8s:io.kubernetes.pod.namespace": networking

        # Allow intra-namespace traffic (pod-to-pod within jellyfin)
        - fromEndpoints:
              - matchLabels:
                    "k8s:io.kubernetes.pod.namespace": *namespace

        # Allow ingress from prometheus
        - fromEndpoints:
              - matchLabels:
                    app.kubernetes.io/name: prometheus
                    # This label must exist on the namespace object itself
                    "k8s:io.kubernetes.pod.namespace": monitoring

        # Allow ingress from servarr
        - fromEndpoints:
              - matchLabels:
                    "k8s:io.kubernetes.pod.namespace": servarr

    egress:
        # Allow intra-namespace traffic
        - toEndpoints:
              - matchLabels:
                    "k8s:io.kubernetes.pod.namespace": *namespace

        # Allow DNS
        - toEndpoints:
              - matchLabels:
                    "k8s:io.kubernetes.pod.namespace": kube-system
                    k8s-app: kube-dns
          toPorts:
              - ports:
                    - port: "53"
                      protocol: UDP
                    - port: "53"
                      protocol: TCP

        # Allow internet egress
        - toEntities:
              - world
